--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/tpliakas/explainable.git"
+    "url": "git+https://github.com/tpliakas/explainable.git"
   },
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
